Allow rekoginition access for ec2 iam role

--- a/ddr.template
+++ b/ddr.template
@@ -138,6 +138,21 @@
                                 }
                             ]
                         }
+                    },
+                    {
+                        "PolicyName": "DdrRekognitionAccess",
+                        "PolicyDocument": {
+                            "Version": "2012-10-17",
+                            "Statement": [
+                                {
+                                    "Effect": "Allow",
+                                    "Action": [
+                                        "rekognition:*"
+                                    ],
+                                    "Resource": "*"
+                                }
+                            ]
+                        }
                     }
                 ]
             }
